Added recommended posts output
